Difficulty button text no longer wrapping for mobile view

--- a/styles/Home.css
+++ b/styles/Home.css
@@ -242,6 +242,7 @@
   cursor: pointer;
   text-align: right;
   position: relative;
+  white-space: nowrap;
 }
 
 .diff_option:hover {
